pytest/ex25.txt
Python 3.5.2 (v3.5.2:4def2a2901a5, Jun 26 2016, 10:47:25) 
[GCC 4.2.1 (Apple Inc. build 5666) (dot 3)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> import ex25
>>> sentence = "All good things come to those who wait."
>>> words = ex25.break_words(sentence)
>>> words
['All', 'good', 'things', 'come', 'to', 'those', 'who', 'wait.']
>>> sorted_words = ex25.sort_words(words)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: module 'ex25' has no attribute 'sort_words'
>>> >>> sorted_words = ex25.sort_word(words)
>>> sorted_words
['All', 'come', 'good', 'things', 'those', 'to', 'wait.', 'who']
>>> ex25.print_first_word(words)
All
>>> ex25.print_last_word(words)
wait.
>>> words
['good', 'things', 'come', 'to', 'those', 'who']
>>> sorted_words
['All', 'come', 'good', 'things', 'those', 'to', 'wait.', 'who']
>>> words
['good', 'things', 'come', 'to', 'those', 'who']
>>> ex25.print_last_word(sorted_words)
who
>>> ex25.print_first_word(sorted_words)
All
>>> sorted_words
['come', 'good', 'things', 'those', 'to', 'wait.']
>>> words
['good', 'things', 'come', 'to', 'those', 'who']
>>> sorted_words = ex25.sort_sentence(sentence)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/Users/aliciali/Documents/GIT/pytest/ex25.py", line 29, in sort_sentence
    return sort_words(words)
NameError: name 'sort_words' is not defined
>>> sorted_words = ex25.sort_sentence(sentence)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/Users/aliciali/Documents/GIT/pytest/ex25.py", line 29, in sort_sentence
    return sort_word(words)
NameError: name 'sort_words' is not defined
>>> import ex25.py
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ImportError: No module named 'ex25.py'; 'ex25' is not a package
>>> import ex25
>>> sorted_words = ex25.sort_sentence(sentence)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/Users/aliciali/Documents/GIT/pytest/ex25.py", line 29, in sort_sentence
    return sort_word(words)
NameError: name 'sort_words' is not defined
>>> exit()
python3
Python 3.5.2 (v3.5.2:4def2a2901a5, Jun 26 2016, 10:47:25) 
[GCC 4.2.1 (Apple Inc. build 5666) (dot 3)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> import ex25
>>> sentence= "All good things come to those who wait."
>>> words = ex25.bread_words(sentece)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: module 'ex25' has no attribute 'bread_words'
>>> words = ex25.bread_word(sentece)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: module 'ex25' has no attribute 'bread_word'
>>> words = ex25.break_words(sentece)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'sentece' is not defined
>>> words = ex25.break_words(sentence)
>>> sentencd
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'sentencd' is not defined
>>> sentence
'All good things come to those who wait.'
>>> words
['All', 'good', 'things', 'come', 'to', 'those', 'who', 'wait.']
>>> sorted_words = ex25.sort_word(words)
>>> sorted_words
['All', 'come', 'good', 'things', 'those', 'to', 'wait.', 'who']
>>> words
['All', 'good', 'things', 'come', 'to', 'those', 'who', 'wait.']
>>> sentence
'All good things come to those who wait.'
>>> ex25.print_first_word(words)
All
>>> ex25.print_last_word(words)
wait.
>>> words
['good', 'things', 'come', 'to', 'those', 'who']
>>> ex25.print_first_word(sorted_words)
All
>>> ex25.print_last_word(sorted_words)
who
>>> words
['good', 'things', 'come', 'to', 'those', 'who']
>>> sorted_words
['come', 'good', 'things', 'those', 'to', 'wait.']
>>> sentence
'All good things come to those who wait.'
>>> sorted_words = ex25.sort_sentence(sentence)
>>> sorted_words
['All', 'come', 'good', 'things', 'those', 'to', 'wait.', 'who']
>>> ex25.print_first_and_last(sentence)
All
wait.
>>> ex25.print_first_and_last_sorted(sentence)
All
who
>>> help(ex25)

>>> help(ex25.break_words)

>>> quit()
Python 3.5.2 (v3.5.2:4def2a2901a5, Jun 26 2016, 10:47:25) 
[GCC 4.2.1 (Apple Inc. build 5666) (dot 3)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> from ex25 imoprt bread_words
  File "<stdin>", line 1
    from ex25 imoprt bread_words
                   ^
SyntaxError: invalid syntax
>>> from ex25 imoprt break_words
  File "<stdin>", line 1
    from ex25 imoprt break_words
                   ^
SyntaxError: invalid syntax
>>> from ex25 import break_words
>>> sentence = "All good things."
>>> words = ex25.break_words(sentence)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'ex25' is not defined
>>> words = break_words(sentence)
>>> words
['All', 'good', 'things.']










great work!

1\import vs from import  def_name_local_the_same

2\behind the def use """
in help txt , will find the comment as help

3\understand pacage really means.

4\pop(-1) the last one in the stack; pop(0) the first one



